--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h3>ABOUT</h3>
 		
 		<p>
-			This visualization is a staff tribute to the DEIMOS-1 5th Anniversary. Is has been developed by the ICT Solutions and Earth Observation teams at <a href="http://www.elecnor-deimos.com">Elecnor Deimos</a> from Tres Cantos, Spain. We have used:
+			This visualization is a staff tribute to the DEIMOS-1 5th Anniversary. It has been developed by the ICT Solutions and Earth Observation teams at <a href="http://www.elecnor-deimos.com">Elecnor Deimos</a> from Tres Cantos, Spain. We have used:
 			<ul>
 				<li><a href="http://cartodb.com/">CartoDB</a> platform, <a href="">templates</a> and <a href="">CartoDB.js</a> Javascript library.</li>
 				<li><a href="http://jquery.com/">jQuery</a> and <a href="http://jqueryui.com/">jQuery UI</a>.</ui>
@@ -152,7 +152,7 @@
             mapTypeId: google.maps.MapTypeId.HYBRID
           };
           map = new google.maps.Map(document.getElementById('map'),  mapOptions);
-		  
+
         cartodb.createLayer(map, 'http://mobilitydms.cartodb.com/api/v2/viz/ee54e298-1d4d-11e4-b838-0e73339ffa50/viz.json')
          .addTo(map)
 		 .on('done', function(layer) {
