--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       
 
 	  function addDateRangeSlider(sublayer) {
-         var sql = cartodb.SQL({ user: 'dms-coverage' })
+         var sql = cartodb.SQL({ user: 'elecnor-deimos' })
          // fetch time range
          sql.execute('select max(image_date), min(image_date) from deimos_1_scenes', function(data) {
            var range = data.rows[0];
@@ -153,7 +153,7 @@
           };
           map = new google.maps.Map(document.getElementById('map'),  mapOptions);
 
-        cartodb.createLayer(map, 'http://mobilitydms.cartodb.com/api/v2/viz/ee54e298-1d4d-11e4-b838-0e73339ffa50/viz.json')
+        cartodb.createLayer(map, 'http://mobilitydms.cartodb.com/api/v2/viz/31c8ab00-6f00-11e4-b9f2-0e9d821ea90d/viz.json')
          .addTo(map)
 		 .on('done', function(layer) {
            addDateRangeSlider(layer.getSubLayer(0));
